--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@react-hook/resize-observer": "^2.0.2",
     "@types/uuid": "^10.0.0",
     "@uidotdev/usehooks": "^2.4.1",
+    "docx": "^8.5.0",
     "idb": "^8.0.2",
     "next": "14.2.6",
+    "nunjucks": "^3.2.4",
+    "pdfkit": "^0.15.0",
     "react": "^18",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
@@ -26,6 +29,7 @@
   "devDependencies": {
     "@flydotio/dockerfile": "^0.7.10",
     "@types/node": "20.14.10",
+    "@types/nunjucks": "^3.2.6",
     "@types/react": "18.3.4",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "autoprefixer": "^10.4.20",
