Adopt new landing page UI components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,11 @@
     "noImplicitOverride": true,
     "verbatimModuleSyntax": true,
     "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"],
+      "@/components/*": ["./app/components/*"],
+      "@/lib/*": ["./lib/*"]
+    },
     "jsx": "preserve",
     "plugins": [
       {
