--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "dependencies": {
     "@deepgram/sdk": "^3.9.0",
     "@headlessui/react": "^2.2.0",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-hook/resize-observer": "^2.0.2",
     "@types/uuid": "^10.0.0",
     "@uidotdev/usehooks": "^2.4.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "docx": "^8.5.0",
     "idb": "^8.0.2",
+    "lucide-react": "^0.454.0",
     "next": "14.2.6",
     "nunjucks": "^3.2.4",
     "pdfkit": "^0.15.0",
@@ -24,6 +29,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "sass": "^1.81.0",
+    "tailwind-merge": "^2.5.3",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
