--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   "dependencies": {
     "@deepgram/sdk": "^3.9.0",
     "@headlessui/react": "^2.2.0",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.3",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.3",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slider": "^1.2.2",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@radix-ui/react-accordion": "^1.2.3",
-    "@radix-ui/react-slot": "^1.2.3",
     "@react-hook/resize-observer": "^2.0.2",
     "@types/uuid": "^10.0.0",
     "@uidotdev/usehooks": "^2.4.1",
@@ -27,7 +32,7 @@
     "docx": "^8.5.0",
     "idb": "^8.0.2",
     "lucide-react": "^0.454.0",
-    "next": "14.2.6",
+    "next": "^14.2.6",
     "nunjucks": "^3.2.4",
     "pdfkit": "^0.15.0",
     "react": "^18",
